--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "code-exec",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.6.3"
-  },
-  "dependencies": {
-    "@types/dockerode": "^3.3.31",
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.8.6",
-    "ts-node": "^10.9.2"
-  }
+    "name": "code-exec",
+    "module": "index.ts",
+    "type": "module",
+    "devDependencies": {
+        "@types/bun": "latest"
+    },
+    "peerDependencies": {
+        "typescript": "^5.6.3"
+    },
+    "scripts": {
+        "start": "bun index"
+    },
+    "dependencies": {
+        "@types/dockerode": "^3.3.31",
+        "@types/express": "^5.0.0",
+        "@types/node": "^22.8.6",
+        "ts-node": "^10.9.2"
+    }
 }
