--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "peerDependencies": {
         "typescript": "^5.6.3"
     },
-    "scripts": {
-        "start": "bun index"
-    },
+    "start": "bun run index",
     "dependencies": {
         "@types/dockerode": "^3.3.31",
         "@types/express": "^5.0.0",
