--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "peerDependencies": {
         "typescript": "^5.6.3"
     },
-   "scripts": {                     
-        "start": "bun run index"
+    "scripts": {
+        "start": "bun run index.ts"
     },
     "dependencies": {
         "@types/dockerode": "^3.3.31",
