--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "@types/dockerode": "^3.3.31",
         "@types/express": "^5.0.0",
         "@types/node": "^22.8.6",
+        "dockerode": "^4.0.2",
+        "express": "^4.21.1",
         "ts-node": "^10.9.2"
     }
 }
